# FastAPI-React-Example-Backend

./: .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 88fdc0fa74ae_initial_tables.py
fastapi_react_example_backend/: initial_data.py  main.py
fastapi_react_example_backend/api/: deps.py
fastapi_react_example_backend/api/v1/: api.py  auth.py  users.py
fastapi_react_example_backend/core/: config.py  logging_config.py  security.py
fastapi_react_example_backend/crud/: token.py  user.py
fastapi_react_example_backend/db/: session.py  types.py
fastapi_react_example_backend/middleware/: structlog.py
fastapi_react_example_backend/models/: __init__.py  token.py  user.py
tests/: conftest.py  test_security.py
tests/api/v1/: test_auth.py  test_users.py
